--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -189,9 +189,10 @@
       </tr>
     </table>        
     
+  <div id="venn_path_dinamic" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
   
   <h4>Table 5. All</h4>
-      <table id="tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+      <table id="tbl-all" class="path table table-striped table-bordered path-dinamic" cellspacing="0" width="100%">
         <thead>
           <tr>
            <th>Pathway Name</th>
@@ -213,7 +214,7 @@
           
           <div id="path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_path-nhk-type1" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
@@ -228,7 +229,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table> 
+    </table> -->
   <h4>Table 6. NHK vs Type1</h4>
       <table id="tbl-nhk-type1" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -250,7 +251,7 @@
           
           <div id="path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_path-nhk-type2" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
@@ -265,7 +266,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
   <h4>Table 7. NHK vs Type2</h4>
       <table id="tbl-nhk-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -288,7 +289,7 @@
           <div id="path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
   
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_path-nhk-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
@@ -303,7 +304,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
   
   <h4>Table 8. NHK vs Type3</h4>
       <table id="tbl-nhk-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -327,7 +328,7 @@
           <div id="path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
   
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_path-type1-type2" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
@@ -342,7 +343,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
   
   <h4>Table 9. Type1 vs Type2</h4>
       <table id="tbl-type1-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -366,7 +367,7 @@
           <div id="path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
   
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_path-type1-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
@@ -381,7 +382,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
   
   <h4>Table 10. Type1 vs Type3</h4>
       <table id="tbl-type1-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -406,7 +407,7 @@
           <div id="path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
   
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_path-type2-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
@@ -421,7 +422,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
   
   <h4>Table 11. Type2 vs Type3</h4>
       <table id="tbl-type2-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -477,6 +478,7 @@
        </td>
       </tr>
     </table>
+  <div id="venn_meta_dinamic" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
   <h4>Table 12. All</h4>
       <table id="meta_tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -500,7 +502,7 @@
           
      <div id="meta_path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_meta-nhk-type1" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
@@ -515,7 +517,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
     
   <h4>Table 13. NHK vs Type1</h4>
       <table id="meta_tbl-nhk-type1" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -539,7 +541,7 @@
           
   <div id="meta_path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_meta-nhk-type2" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
@@ -554,7 +556,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
     
   <h4>Table 14. NHK vs Type2</h4>
       <table id="meta_tbl-nhk-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -577,7 +579,7 @@
           
   <div id="meta_path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_meta-nhk-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
@@ -592,7 +594,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
     
   <h4>Table 15. NHK vs Type3</h4>
       <table id="meta_tbl-nhk-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -615,7 +617,7 @@
           
   <div id="meta_path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_meta-type1-type2" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
@@ -630,7 +632,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
   <h4>Table 16. Type1 vs Type2</h4>
       <table id="meta_tbl-type1-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -652,7 +654,7 @@
           
   <div id="meta_path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
  
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_meta-type1-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
@@ -667,7 +669,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
   <h4>Table 17. Type1 vs Type3</h4>
       <table id="meta_tbl-type1-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -690,7 +692,7 @@
           
   <div id="meta_path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   
-  <table style='text-align:center;'>
+  <!--  <table style='text-align:center;'>
       <tr>
        <td>
        <div id="venn_meta-type2-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
@@ -705,7 +707,7 @@
        Down regulated pathways
        </td>
       </tr>
-    </table>
+    </table>-->
   <h4>Table 18. Type2 vs Type3</h4>
       <table id="meta_tbl-type2-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -763,16 +765,16 @@
     </div>
     
     
-    <script src="https://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script src="https://cdn.datatables.net/1.10.9/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
-    <script src="https://cdn.datatables.net/buttons/1.0.3/js/dataTables.buttons.min.js" type="text/javascript"></script>
-    <script src="https://cdn.datatables.net/buttons/1.0.3/js/buttons.bootstrap.min.js" type="text/javascript"></script>
-    <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.flash.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.10/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/buttons/1.1.0/js/dataTables.buttons.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/buttons/1.1.0/js/buttons.bootstrap.min.js" type="text/javascript"></script>
+    <script src="//cdn.datatables.net/buttons/1.1.0/js/buttons.flash.min.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js" type="text/javascript"></script>
     <script src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js" type="text/javascript"></script>
     <script src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js" type="text/javascript"></script>
-    <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.html5.min.js" type="text/javascript"></script>
-    <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.print.min.js" type="text/javascript"></script>
+    <script src="//cdn.datatables.net/buttons/1.1.0/js/buttons.html5.min.js" type="text/javascript"></script>
+    <script src="//cdn.datatables.net/buttons/1.1.0/js/buttons.print.min.js" type="text/javascript"></script>
     
     <script src="/static/report/loreal/js/venn.js/venn.js" type="text/javascript"></script>
     <script src="/static/report/loreal/js/tables.js" type="text/javascript"></script>
