--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -68,6 +68,8 @@
   <div class="tab-content">
    <div role="tabpanel" class="tab-pane fade in active" id="allgenes_tab">
    <div id="genes-3d" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+   
+   
    </div>
   
     <div role="tabpanel" class="tab-pane fade " id="nhk_tab">
@@ -728,8 +730,12 @@
 <h1>Public domain screening</h1>
 <hr/>
 <a href='/static/report/loreal/public-domain.jpg' target=' _blank'>
-<img src='/static/report/loreal/public-domain.jpg' style="width:90%"/>
-</a>
+<img src='/static/report/loreal/public-domain.jpg' style="width:95%"/>
+</a><hr/>
+<img src='/static/report/loreal/ECM_corplot.png' style='width:95%' /><hr/><br/>
+<img src='/static/report/loreal/GF.png' style='width:95%' /><hr/><br/>
+<img src='/static/report/loreal/All_genes.png' style='width:95%' /><hr/><br/>
+
 
 </div>
 
