--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -559,7 +559,7 @@ Metabolic pathways screening showed that all studied samples have a suppressed b
   arachidonic acid (polyunsaturated omega-6 fatty acid), linoleic acid (polyunsaturated omega-6 fatty acid)
    metabolism signaling pathways in RhE samples. Since cholesterol, fatty acids and their esters are major 
    components of stratum corneum [12] and all of the above mentioned pathways are not extremely perturbed 
-   compared to the reference NHE, RhE resemble the signature of a "horny layer” of skin on a pathway level. 
+   compared to the reference NHE, RhE resemble the signature of a "horny layer" of skin on a pathway level. 
 To sum up, the models of RhE resemble mature epidermis with "horny layer" on a pathway and gene expression 
 level. RhE type 2 samples are more similar to NHE on signaling and metabolic pathway levels.
  <!-- Meabolic PAthway Nav tabs -->
