--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -1802,7 +1802,7 @@ Gene subsetting analysis demonstrated that samples could be divided into 2 group
 signature and "epidermis" signature.<br/>
 Also, analysis allows to determine outliers from public domain, such as GSE48459 (EpiDerm samples) that 
 strangely resemble "dermis" signature, while EpiDerm is a model of skin epidermis and is supposed to show 
-“epidermis” signature.
+"epidermis" signature.
 
 
 <hr/>  
