--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -57,7 +57,7 @@
           <ul>
           <li>NHE - normal human epidermis</li>
           <li>NHEK - normal human epidermal keratinocytes</li>
-          <li>RhE - reconstructed human epidermis/li>
+          <li>RhE - reconstructed human epidermis</li>
           <li>PAS - pathway activation score</li>
           <li>PCA - principal component analysis</li>
           <li>ECM - extracellular matrix</li>
