--- a/oncoFinder2/templates/website/bt_report.html
+++ b/oncoFinder2/templates/website/bt_report.html
@@ -178,14 +178,172 @@
  <hr/> 
 <h2 id='path_analysis'>Pathway Analysis</h2>
 <hr/>
-
-
 <h3>Signaling Pathways</h3>
 <hr/>
+
+<!-- PAthway Nav tabs -->
+         <ul class="nav nav-tabs" role="tablist">
+         <li role="presentation" class="active"><a href="#ESvsASCvsCCL_tab" aria-controls="settings" role="tab" data-toggle="tab">ESvsASCvsCCL</a></li>
+         <li role="presentation" ><a href="#ESvsANCvsCCL_tab" aria-controls="home" role="tab" data-toggle="tab">ESvsANCvsCCL</a></li>
+         <li role="presentation"><a href="#ESvsAECvsCCL_tab" aria-controls="profile" role="tab" data-toggle="tab">ESvsAECvsCCL</a></li>
+         <li role="presentation"><a href="#ESvsABCvsCCL_tab" aria-controls="messages" role="tab" data-toggle="tab">ESvsABCvsCCL</a></li>
+        </ul>
+         
+         <!-- PATHWAY Tab panes -->
+  <div class="tab-content">
+  
+  <div role="tabpanel" class="tab-pane fade in active" id="ESvsASCvsCCL_tab">     <br/> 
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-ESvsASCvsCCL-up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-ESvsASCvsCCL-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>        
+   <br/>
+  <div id="venn_path_dinamic_ESvsASCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  </div>
+  
+  <div role="tabpanel" class="tab-pane fade " id="ESvsANCvsCCL_tab">     <br/> 
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-ESvsANCvsCCL-up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-ESvsANCvsCCL-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>        
+    
+  <div id="venn_path_dinamic_ESvsANCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  </div>
+  
+  <div role="tabpanel" class="tab-pane fade " id="ESvsAECvsCCL_tab">     <br/> 
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-ESvsAECvsCCL-up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-ESvsAECvsCCL-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>        
+    
+  <div id="venn_path_dinamic_ESvsAECvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  </div>
+  
+  <div role="tabpanel" class="tab-pane fade " id="ESvsABCvsCCL_tab">     <br/> 
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-ESvsABCvsCCL-up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-ESvsABCvsCCL-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>        
+    
+  <div id="venn_path_dinamic_ESvsABCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  </div>
+  </div> <!-- end of path tab-content -->
+
+
 <!-- ---------------------------- METABOLIC------------------------ -->
 <h3>Metabolic Pathways</h3>
 <hr/>
-
+<!-- Metabolic Nav tabs -->
+         <ul class="nav nav-tabs" role="tablist">
+         <li role="presentation" class="active"><a href="#meta_ESvsASCvsCCL_tab" aria-controls="settings" role="tab" data-toggle="tab">ESvsASCvsCCL</a></li>
+         <li role="presentation" ><a href="#meta_ESvsANCvsCCL_tab" aria-controls="home" role="tab" data-toggle="tab">ESvsANCvsCCL</a></li>
+         <li role="presentation"><a href="#meta_ESvsAECvsCCL_tab" aria-controls="profile" role="tab" data-toggle="tab">ESvsAECvsCCL</a></li>
+         <li role="presentation"><a href="#meta_ESvsABCvsCCL_tab" aria-controls="messages" role="tab" data-toggle="tab">ESvsABCvsCCL</a></li>
+        </ul>
+         
+         <!-- PATHWAY Tab panes -->
+  <div class="tab-content">
+  
+  <div role="tabpanel" class="tab-pane fade in active" id="meta_ESvsASCvsCCL_tab">     <br/> 
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="meta_venn_path-ESvsASCvsCCL-up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="meta_venn_path-ESvsASCvsCCL-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>        
+   <br/>
+  <div id="meta_venn_path_dinamic_ESvsASCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  </div>
+  
+  <div role="tabpanel" class="tab-pane fade " id="meta_ESvsANCvsCCL_tab">     <br/> 
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="meta_venn_path-ESvsANCvsCCL-up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="meta_venn_path-ESvsANCvsCCL-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>        
+    
+  <div id="meta_venn_path_dinamic_ESvsANCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  </div>
+  
+  <div role="tabpanel" class="tab-pane fade " id="meta_ESvsAECvsCCL_tab">     <br/> 
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="meta_venn_path-ESvsAECvsCCL-up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="meta_venn_path-ESvsAECvsCCL-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>        
+    
+  <div id="meta_venn_path_dinamic_ESvsAECvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  </div>
+  
+  <div role="tabpanel" class="tab-pane fade " id="meta_ESvsABCvsCCL_tab">     <br/> 
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="meta_venn_path-ESvsABCvsCCL-up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="meta_venn_path-ESvsABCvsCCL-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>        
+    
+  <div id="meta_venn_path_dinamic_ESvsABCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  </div>
+  </div> <!-- end of path tab-content -->
  
 
 <hr/>  
@@ -240,9 +398,10 @@
     <script src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js" type="text/javascript"></script>
     <script src="//cdn.datatables.net/buttons/1.1.0/js/buttons.html5.min.js" type="text/javascript"></script>
     <script src="//cdn.datatables.net/buttons/1.1.0/js/buttons.print.min.js" type="text/javascript"></script>
-    
+    <script src="/static/report/bt/js/venn.js/venn.js" type="text/javascript"></script>
     
     <script src="/static/report/bt/js/tables.js" type="text/javascript"></script>
+    <script src="/static/report/bt/js/venn-diagram.js" type="text/javascript"></script>
     <!--  
     <script src="/static/report/loreal/js/venn.js/venn.js" type="text/javascript"></script>
     
